@@ -1,7 +1,7 @@
 [begin] (Appearance) 
     [exec] (Conky){conky-manager2}
     [submenu] (Docks)
-		[exec] (Default) {~/.fluxbox/scripts/DefaultDock.mxdk}
+        [exec] (Default) {~/.fluxbox/scripts/DefaultDock.mxdk}
         [exec] (Tint2) {mxfb-tint2-manager}
         [separator]
         [exec] (Dockmaker) {mx-dockmaker}
@@ -9,13 +9,13 @@
     [exec] (Desktop icons) {mx-idesktool}
     [exec] (Monitors) {gkrellm}
     [submenu] (Style)
-    	[Exec] (— OVERLAY —)
-    	[Exec] (Border) {mxfb-borders}
-    	[Exec] (Menu font) {mxfb-menufont}
-    	[Exec] (Top) {mxfb-top}
-    	[Exec] (— TOOLBAR, MENU —)
-         	[stylesdir] (~/.fluxbox/styles)
-        	[stylesdir] (/usr/share/fluxbox/styles) 
+        [Exec] (— OVERLAY —)
+        [Exec] (Border) {mxfb-borders}
+        [Exec] (Menu font) {mxfb-menufont}
+        [Exec] (Top) {mxfb-top}
+        [Exec] (— TOOLBAR, MENU —)
+        [stylesdir] (~/.fluxbox/styles)
+        [stylesdir] (/usr/share/fluxbox/styles) 
     [end]
     [exec] (Theme) {lxappearance}
     [submenu] (Toolbar)
@@ -23,7 +23,8 @@
         [exec] (Traditional) {toggletint2}
     [end]
     [submenu] (Wallpaper) 
-    [exec] (Rotate) {mxfb-bg-rotate}
-    [exec] (Separate) {mxfb-separate-backgrounds}
-    [exec] (Select) {nitrogen}
+        [exec] (Rotate) {mxfb-bg-rotate}
+        [exec] (Separate) {mxfb-separate-backgrounds}
+        [exec] (Select) {nitrogen}
+    [end]
 [end]
