@@ -1,15 +1,15 @@
 [begin] (Out of sight) 
-    [exec] (Kill dock) { killall wmalauncher               }
-    [exec] (Kill a window) { xkill                             }
+    [exec] (Kill dock) { killall wmalauncher }
+    [exec] (Kill a window) { xkill }
     [separator]
-    [exec] (Toggle conky) { conkytoggle.sh                    }
-    [exec] (Toggle iDesk) { idesktoggle idesk                 }
-    [exec] (Toggle icons) { idesktoggle icons                 }
+    [exec] (Toggle conky) { conkytoggle.sh }
+    [exec] (Toggle iDesk) { idesktoggle idesk }
+    [exec] (Toggle icons) { idesktoggle icons }
     [exec] (Toggle autohide dock) { $HOME/.fluxbox/scripts/toggledock }
     [exec] (Toggle autohide toolbar) {$HOME/.fluxbox/scripts/toggletoolbar}
     [exec] (Toggle autohide panel) {$HOME/.fluxbox/scripts/toggletint2}
     [exec] (Toggle autohide panel-dock) {$HOME/.fluxbox/scripts/toggletint2-dock}
-    [exec] (Toggle monitors) { toggle-mx gkrellm                 }
+    [exec] (Toggle monitors) { toggle-mx gkrellm }
     [separator]
     [exec] (Disable default dock) { killall wmalauncher && $HOME/.fluxbox/scripts/dfltdck_kill }
 [end]
