@@ -3,6 +3,7 @@ mxfb-menu (22.03.01mx) mx; urgency=medium
   * create fluxbox menu if missing
   * add truncate before write
   * addjust password prompt for arandr in menu
+  * adjust fluxbox and openbox menu entries
 
  -- fehlix <fehlix@mxlinux.org>  Tue, 01 Mar 2022 07:11:18 -0400
 
